feat: se crea logica de negocio para el mapa
